# etu_moevm

./: README.md  linear-lists.c
AlgsDS/Rymar_Mariya_lb1/src/: main.py  test.py
AlgsDS/Rymar_Mariya_lb2/src/: src.py  test.py
AlgsDS/Rymar_Mariya_lb3/src/: main.py  test.py
AlgsDS/Rymar_Mariya_lb4/src/: main.py  test.py
DAA/lb1/src/: main.cpp
DAA/lb2/src/: aStar.py  draw.py  greedyAlg.py  test.py
DAA/lb4/src/: KMP1.py  KMP2.py  test_KMP1.py  test_KMP2.py
OS/lb1/: backprocess.txt  report.txt
compmath/: Kalman.ipynb  compmaths.ipynb
oop-labs/lab2/src/control/: mediator.cpp
oop-labs/lab2/src/event/: eventCreator.h  eventKey.h  eventTeleport.cpp  eventTrap.cpp
oop-labs/lab2/src/field/: cell.h  field.h
oop-labs/laba1/src/: CMakeLists.txt
oop-labs/laba5/control/: commandReader.h  controller.cpp  mediator.h
oop-labs/laba5/event/: eventTrap.h  eventWalls.cpp
oop-labs/laba5/field/: cell.cpp  cell.h  cellView.h  field.cpp  field.h  fieldView.cpp  fieldView.h
oop-labs/laba6/: CMakeLists.txt  report6.docx
oop-labs/laba6/control/: commandReader.cpp  controller.cpp  controller.h
oop-labs/laba6/event/: eventField.h  eventKey.h  eventTrap.cpp  eventTrap.h
oop-labs/laba6/field/: cell.h  field.cpp  field.h  fieldGenerator.h
oop-labs/laba6/lb6/: save.txt  saveField.txt
oop-labs/laba6/log/: LogPool.h
oop-labs/laba6/player/: Player.cpp  Player.h
oop-labs/laba6/version1/: saveField.txt  savePlayer.txt
recursion/: recursionArray.c  recursionBinary.c  recursionFactorial.c  recursionFigure.c  recursionLabirinth.c  recursionPow.c  recursionSum.c
(+102 files in other folders)
